--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 /public/
 /resources/
 /.hugo_build.lock
+
+# OpenClaw agent/workspace artifacts (should not be published)
+/AGENTS.md
+/BOOTSTRAP.md
+/HEARTBEAT.md
+/IDENTITY.md
+/SOUL.md
+/TOOLS.md
+/USER.md
+/agents/
